# time-tracker

./: .coverage  .gitignore  AGENTS.md  README.md  Taskfile.yml  TimeTracker.desktop  pyproject.toml  time-tracker.config.example.json
data/: time_log.csv
src/time_tracker/: calc.py  cli.py  config.py  csv_store.py  export_markdown.py  holidays_nrw.py  location_parse.py  model.py  parse.py
src/time_tracker/tui/: app.py  day_stats.py
tests/: test_calc.py  test_config_load.py  test_csv_store.py  test_export_markdown.py  test_holidays_and_cli.py  test_location_parse.py  test_model.py  test_parse.py  test_tui_day_stats.py  test_tui_e2e.py
